<?xml version="1.0" encoding="utf-8"?>

<resources>
    <!-- Name for the application [CHAR LIMIT=12] -->
    <string name="app_name">Inventory App</string>

    <!-- Label for overflow menu option that inserts dummy data into the app [CHAR LIMIT=20] -->
    <string name="action_insert_dummy_data">Insert Dummy Data</string>

    <!-- Label for overflow menu option that deletes all data in the app [CHAR LIMIT=20] -->
    <string name="action_delete_all_entries">Delete All Items</string>

    <!-- Title for the activity to add a new item [CHAR LIMIT=20] -->
    <string name="editor_activity_title_new_item">Add item</string>

    <!-- Title for the activity to edit item [CHAR LIMIT=20] -->
    <string name="editor_activity_title_edit_item">Edit item</string>

    <!-- Label for editor menu option to save item and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label for editor overflow menu option that deletes the current item [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>

    <!-- Label for overview category of attributes in the editor [CHAR LIMIT=30] -->
    <string name="category_overview">Overview</string>

    <!-- Label for price information in the editor [CHAR LIMIT=30] -->
    <string name="category_price">Price</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_item_name">Name</string>

    <!-- Text hint for price field in the editor [CHAR LIMIT=30] -->
    <string name="hint_item_price">Price</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_item_quantity">Quantity</string>

    <!-- Units for price of one item (USD) [CHAR LIMIT=5] -->
    <string name="unit_item_price">USD</string>

    <string name="editor_insert_item_failed">Error with saving item</string>

    <string name="editor_insert_item_successful">Item saved</string>

    <!-- Title text for the empty view [CHAR LIMIT=50] -->
    <string name="empty_view_title_text">It\'s a bit empty here...</string>

    <!-- Subtitle text for the empty view that prompts the user to add a item [CHAR LIMIT=50] -->
    <string name="empty_view_subtitle_text">Get started by adding item.</string>
    <string name="editor_update_item_failed">Update item failed</string>
    <string name="editor_update_item_successful">Update item successful</string>

    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>

    <!-- Dialog button text for the option to keep editing the current item [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>

    <!-- Toast message in editor when current item was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_item_successful">Item deleted</string>

    <!-- Toast message in editor when current item has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_item_failed">Error with deleting item</string>

    <!-- Dialog message to ask the user to confirm deleting the current item [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this item?</string>

    <!-- Dialog message to ask the user to confirm deleting the current item [CHAR LIMIT=NONE] -->
    <string name="delete_all_dialog_msg">Delete All items?</string>

    <!-- Dialog button text for the option to confirm deleting the current item [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current item [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>
    <string name="hint_supp_name">Supplier Name</string>
    <string name="hint_supp_phone">Supplier Phone</string>
    <string name="unit_item">pcs</string>
    <string name="list_sell_button_txt">Sell</string>
    <string name="sale_ok">Sale OK</string>
    <string name="sale_failed">Sale Failed</string>
    <string name="out_of_stock">Out of STOCK !!!</string>
    <string name="qty_is_zero">Quantity is already zero.</string>
    <string name="name_required_message">Name is required!</string>
    <string name="quantity_required_message">Quantity is required!</string>
    <string name="price_required_message">Price is required!</string>
    <string name="supp_name_required_message">Supplier name is required!</string>
    <string name="supp_phone_required_message">Supplier phone id required.</string>
    <string name="row_not_saved_error_message">Error saving item.</string>
    <string name="row_saved_successfully_message">Item successfully saved.</string>
    <string name="Sell_itel_list_button">Sell</string>
    <string name="quantity_label">Quantity</string>
    <string name="qty_minus_button">-</string>
    <string name="qty_plus_button">+</string>
    <string name="delete_item_button">Delete Item</string>
    <string name="phone_to_supply_button">Phone to supply</string>


</resources>