<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">

    <!-- Overview category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_overview" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="4dp">

            <!-- Name field -->
            <EditText
                android:id="@+id/edit_item_name"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_item_name"
                android:inputType="textCapWords" />

            <!-- Supplyer name field -->
            <EditText
                android:id="@+id/edit_item_supp_name"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_supp_name"
                android:inputType="textCapWords" />

            <!-- Supplayer phone field -->
            <EditText
                android:id="@+id/edit_supp_phone"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_supp_phone"
                android:inputType="phone" />


        </LinearLayout>
    </LinearLayout>


    <!-- Measurement category -->
    <LinearLayout
        android:id="@+id/container_measurement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!--&lt;!&ndash; Label &ndash;&gt;
        <TextView
            android:text="@string/category_measurement"
            style="@style/CategoryStyle" />-->

        <!-- Input fields -->
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:paddingLeft="4dp">

            <!-- Quantity field -->
            <EditText
                android:id="@+id/edit_item_quantity"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_item_quantity"
                android:inputType="number" />

            <!-- Units for weight (kg) -->
            <TextView
                android:id="@+id/item_unit"
                style="@style/EditorUnitsStyle"
                android:text="@string/unit_item" />

            <!-- Price field -->

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:paddingLeft="4dp">

            <EditText
                android:id="@+id/edit_item_price"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_item_price"
                android:inputType="number|numberDecimal" />

            <!-- Units for weight (kg) -->
            <TextView
                android:id="@+id/item_unit_price"
                style="@style/EditorUnitsStyle"
                android:text="@string/unit_item_price" />
        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/qty_label"
            style="@style/EditorFieldStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Quantity" />

        <Button
            android:id="@+id/qty_minus_button"
            android:layout_width="64dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="0dp"
            android:padding="16dp"
            android:text="-" />

        <Button
            android:id="@+id/qty_plus_button"
            android:layout_width="64dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:padding="16dp"
            android:text="+" />


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/delete_item_button"
            android:layout_width="160dp"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:padding="16dp"
            android:layout_weight="1"
            android:text="Delete Item" />

        <Button
            android:id="@+id/phone_to_supply_button"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:padding="16dp"
            android:text="Phone to supply" />


    </LinearLayout>

</LinearLayout>